     can be started anytime. Tested on Masterguard A1000 and A2000 units. [#3135]
   * `nutdrv_qx_masterguard` sub-driver fix `masterguard_add_slaveaddr` to
     return the correct command length, resolving a bug for all commands using
     the `,XX` slave address placeholder. This also enables support for the
     `test.battery.start.deep` (`TUD`) command. [#3141]

 - `powerp-bin` and `powerp-txt` driver updates:
   * Their `upsdrv_initinfo()` methods did not explicitly reference the
     `INSTCMD` and `SETVAR` handler methods (it is unknown whether this
     actually broke anything, or the needed values were deduced from
     subdriver definition then). For consistency, these pointers are now
     assigned. [#1962]

 - `riello_ser` and `riello_usb` driver updates:
   * Since the beginning, these drivers fenced availability of *either*
     `load.*` *or* `shutdown.return` instant commands based on current
     power situation (which was also unknown when the `drivername -k` mode
     was used to shut down the system). There seems to be little reason for
     such separation, so it is now avoided and the current device status
     is queried when starting to handle the UPS poweroff, as a means to
     verify communication ability. [#1962]

 - `snmp-ups` driver updates:
   * Define an internal `SU_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen, or if the `mibs=auto` detection only found the fallback
     IETF mapping. [PR #3095]

 - `tripplite_usb` driver updates:
   * Added support for Tripplite protocol 3017 (mostly ASCII). [issue #2258,
     PR #3093]

 - `usbhid-ups` driver updates:
   * Declared support for APC with USB ID `051d:0005` (details may evolve