@@ -257,6 +257,7 @@ CMDDESC test.battery.stop "Stop the battery test"
 CMDDESC test.system.start "Start a system test"
 CMDDESC calibrate.start "Start run time calibration"
 CMDDESC calibrate.stop "Stop run time calibration"
+CMDDESC clear.fault.record "Clear fault/error record"
 CMDDESC bypass.start "Put the UPS in Bypass mode"
 CMDDESC bypass.stop "Take the UPS out of Bypass mode"
 CMDDESC experimental.ecomode.start "Put UPS in High Efficiency (aka ECO) mode"
